--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -5,9 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.HomeScreenFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+    <include
+        android:id="@+id/listLayout"
+        layout="@layout/list_images" />
 
 </FrameLayout>
