--- a/app/src/main/res/layout/list_images.xml
+++ b/app/src/main/res/layout/list_images.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,15 +18,35 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true" />
 
-    <TextView
+    <LinearLayout
         android:id="@+id/emptyList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_margin="@dimen/spacing_large"
+        android:orientation="vertical"
+        android:visibility="gone"
         android:gravity="center"
-        android:textColor="@color/gray"
-        android:textSize="@dimen/font_xLarge"
-        android:visibility="gone" />
+        tools:visibility="visible">
+
+        <TextView
+            android:id="@+id/emptyListText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/spacing_large"
+            android:layout_marginBottom="@dimen/spacing_large"
+            android:gravity="center"
+            android:textColor="@color/gray"
+            android:textSize="@dimen/font_xLarge" />
+
+        <Button
+            android:id="@+id/retryBtn"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/retry" />
+
+    </LinearLayout>
+
 
 </RelativeLayout>
