--- a/app/src/main/res/layout/list_images.xml
+++ b/app/src/main/res/layout/list_images.xml
@@ -41,10 +41,11 @@
         <Button
             android:id="@+id/retryBtn"
             style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/width_normal"
+            android:layout_height="@dimen/height_small"
             android:layout_gravity="center"
-            android:text="@string/retry" />
+            android:text="@string/retry"
+            android:textSize="@dimen/font_normal" />
 
     </LinearLayout>
 
