--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -8,8 +8,10 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fontFamily="@font/elmessiri_bold"
         android:gravity="center"
         android:text="@string/splash_message"
+        android:textColor="@color/purple_700"
         android:textSize="@dimen/font_xLarge" />
 
 </FrameLayout>
