--- a/app/src/main/res/layout/list_network_state.xml
+++ b/app/src/main/res/layout/list_network_state.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:fontFamily="@font/elmessiri_regular"
         android:textSize="@dimen/font_default" />
 
     <ProgressBar
@@ -25,6 +26,7 @@
         android:layout_width="@dimen/width_normal"
         android:layout_height="@dimen/height_small"
         android:layout_gravity="center"
+        android:fontFamily="@font/elmessiri_bold"
         android:text="@string/retry"
         android:textSize="@dimen/font_normal" />
 </LinearLayout>
