--- a/app/src/main/res/layout/one_item_list.xml
+++ b/app/src/main/res/layout/one_item_list.xml
@@ -25,6 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/spacing_huge"
+            android:fontFamily="@font/elmessiri_regular"
             android:textColor="@color/black"
             android:textSize="@dimen/font_xLarge"
             app:layout_constraintBottom_toBottomOf="parent"
