--- a/app/src/main/res/navigation/navigation_project.xml
+++ b/app/src/main/res/navigation/navigation_project.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/splash"
-        android:name="com.islam.shutterstock.ui.splash.SplashFragment"
+        android:name="com.islam.shutterstock.ui.view.splash.SplashFragment"
         android:label="splash"
         tools:layout="@layout/fragment_splash">
 
@@ -21,7 +21,7 @@
 
     <fragment
         android:id="@+id/homeScreenFragment"
-        android:name="com.islam.shutterstock.ui.home.HomeScreenFragment"
+        android:name="com.islam.shutterstock.ui.view.home.HomeScreenFragment"
         android:label="home_screen_fragment"
         tools:layout="@layout/fragment_home_screen" />
 
